# ChangeLog for sys-kernel/openvz-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/openvz-sources/ChangeLog,v 1.134 2010/04/28 05:51:39 pva Exp $

*openvz-sources-2.6.32.3.1 (28 Apr 2010)

  28 Apr 2010; Peter Volkov <pva@gentoo.org>
  -openvz-sources-2.6.32.2.1.ebuild, +openvz-sources-2.6.32.3.1.ebuild:
  Version bump.

*openvz-sources-2.6.27.5.3 (26 Apr 2010)

  26 Apr 2010; Peter Volkov <pva@gentoo.org>
  +openvz-sources-2.6.27.5.3.ebuild:
  Version bump.

  26 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Update Manifest for deblob support in kernel-2 eclass.

*openvz-sources-2.6.32.2.1 (22 Apr 2010)

  22 Apr 2010; Peter Volkov <pva@gentoo.org>
  -openvz-sources-2.6.18.028.068.3-r1.ebuild,
  -openvz-sources-2.6.18.028.068.5.ebuild,
  -openvz-sources-2.6.27.4.1.ebuild, openvz-sources-2.6.27.4.1-r1.ebuild,
  +openvz-sources-2.6.32.2.1.ebuild:
  Added 2.6.32 based kernel, bug #310795, thank Ziga Boehm and Aleksandr
  Zagzin for report. 2.6.27.4.1-r1 amd64/x86 stable, bug #198632. Dropped
  old.

*openvz-sources-2.6.27.4.1-r1 (13 Apr 2010)

  13 Apr 2010; Peter Volkov <pva@gentoo.org>
  +openvz-sources-2.6.27.4.1-r1.ebuild,
  +files/openvz-sources-2.6.27.4.1-CAP_VE.patch,
  +files/openvz-sources-2.6.27.4.1-hrtimer.patch,
  +files/openvz-sources-2.6.27.4.1-nfs-flags.patch,
  +files/openvz-sources-2.6.27.4.1-signal-curr_target.patch,
  +files/openvz-sources-2.6.27.4.1-splice.patch,
  +files/openvz-sources-2.6.27.4.1-task-state-percpu-counters.patch:
  Upstream patches added.

*openvz-sources-2.6.18.028.068.9 (01 Apr 2010)

  01 Apr 2010; Peter Volkov <pva@gentoo.org>
  +openvz-sources-2.6.18.028.068.9.ebuild:
  Version bump RHEL5 based kernel.

*openvz-sources-2.6.27.4.1 (26 Mar 2010)
*openvz-sources-2.6.18.028.068.5 (26 Mar 2010)

  26 Mar 2010; Peter Volkov <pva@gentoo.org>
  -openvz-sources-2.6.18.028.067.4.ebuild,
  -openvz-sources-2.6.18.028.068.3.ebuild,