@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/openvz-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/openvz-sources/ChangeLog,v 1.134 2010/04/28 05:51:39 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/openvz-sources/ChangeLog,v 1.135 2010/05/21 06:50:17 pva Exp $
+
+*openvz-sources-2.6.18.028.069.5 (21 May 2010)
+
+  21 May 2010; Peter Volkov <pva@gentoo.org>
+  +openvz-sources-2.6.18.028.069.5.ebuild:
+  Bump RHEL5 based kernel
 
 *openvz-sources-2.6.32.3.1 (28 Apr 2010)
 
